add identity to school project

--- a/SchoolPrj.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolPrj.Core/Resources/SharedResources.Ar.resx
@@ -147,4 +147,7 @@
   <data name="MaxLength" xml:space="preserve">
     <value>يجب أن يكون الطول 10</value>
   </data>
+  <data name="DepartmentIdIsNotexist" xml:space="preserve">
+    <value>رقم القسم غير موجود</value>
+  </data>
 </root>
