--- a/SchoolPrj.Core/Resources/SharedResources.En.resx
+++ b/SchoolPrj.Core/Resources/SharedResources.En.resx
@@ -147,4 +147,7 @@
   <data name="MaxLength" xml:space="preserve">
     <value>Length must be 10</value>
   </data>
+  <data name="DepartmentIdIsNotexist" xml:space="preserve">
+    <value>Department Id Is Not Exist</value>
+  </data>
 </root>
