--- a/SchoolPrj.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolPrj.Core/Resources/SharedResources.Ar.resx
@@ -165,4 +165,10 @@
   <data name="PasswordChanged" xml:space="preserve">
     <value>تم تغيير كلمة المرور بنجاح.</value>
   </data>
+  <data name="UsernameIsNotExist" xml:space="preserve">
+    <value>اسم المستخدم غير موجود.</value>
+  </data>
+  <data name="PasswordNotCorrect" xml:space="preserve">
+    <value>كلمة المرور غير صحيحة.</value>
+  </data>
 </root>
